--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,22 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--hutool工具包-->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>5.8.11</version> <!-- 请根据需要选择合适的版本 -->
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate.validator</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>6.2.0.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish</groupId>
+                <artifactId>javax.el</artifactId>
+                <version>3.0.0</version>
+            </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -49,15 +65,17 @@
                 <version>8.0.28</version>
             </dependency>
 
-            <dependency>
-                <groupId>com.mysql</groupId>
-                <artifactId>mysql-connector-j</artifactId>
-                <scope>runtime</scope>
-            </dependency>
+            <!--<dependency>-->
+            <!--    <groupId>com.mysql</groupId>-->
+            <!--    <artifactId>mysql-connector-j</artifactId>-->
+            <!--    <version>8.0.32</version>-->
+            <!--    <scope>runtime</scope>-->
+            <!--</dependency>-->
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
+                <version>2.7.3</version>
                 <scope>test</scope>
             </dependency>
 
