--- a/intern-base-intf/pom.xml
+++ b/intern-base-intf/pom.xml
@@ -13,6 +13,21 @@
     <artifactId>intern-base-intf</artifactId>
 
     <dependencies>
+        <!--阿里云oss-->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+        </dependency>
+        <!--文件上传-->
+        <dependency>
+            <groupId>org.dromara.x-file-storage</groupId>
+            <artifactId>x-file-storage-spring</artifactId>
+        </dependency>
+        <!--hutool工具包-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
         <!--启用注解判断非空-->
         <dependency>
             <groupId>org.hibernate.validator</groupId>
