--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,23 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--阿里云oss-->
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>3.16.1</version>
+            </dependency>
+            <!--文件上传-->
+            <dependency>
+                <groupId>org.dromara.x-file-storage</groupId>
+                <artifactId>x-file-storage-spring</artifactId>
+                <version>2.2.1</version>
+            </dependency>
             <!--hutool工具包-->
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
-                <version>5.8.11</version> <!-- 请根据需要选择合适的版本 -->
+                <version>5.8.11</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate.validator</groupId>
@@ -64,13 +76,6 @@
                 <scope>runtime</scope>
                 <version>8.0.28</version>
             </dependency>
-
-            <!--<dependency>-->
-            <!--    <groupId>com.mysql</groupId>-->
-            <!--    <artifactId>mysql-connector-j</artifactId>-->
-            <!--    <version>8.0.32</version>-->
-            <!--    <scope>runtime</scope>-->
-            <!--</dependency>-->
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
