--- a/pom.xml
+++ b/pom.xml
@@ -43,15 +43,11 @@
                 <artifactId>hutool-all</artifactId>
                 <version>5.8.11</version>
             </dependency>
+            <!--参数校验-->
             <dependency>
-                <groupId>org.hibernate.validator</groupId>
-                <artifactId>hibernate-validator</artifactId>
-                <version>6.2.0.Final</version>
-            </dependency>
-            <dependency>
-                <groupId>org.glassfish</groupId>
-                <artifactId>javax.el</artifactId>
-                <version>3.0.0</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>2.5.6</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
@@ -67,6 +63,12 @@
             <dependency>
                 <groupId>vip.xiaozhao.intern</groupId>
                 <artifactId>intern-base-service</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+
+            <dependency>
+                <groupId>vip.xiaozhao.intern</groupId>
+                <artifactId>intern-base-web</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
 
