feat:finished idempotence

--- a/intern-base-intf/pom.xml
+++ b/intern-base-intf/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>intern-base-intf</artifactId>
 
     <dependencies>
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <!--参数校验-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
