--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--redis-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>2.7.3</version>
+            </dependency>
             <!--阿里云oss-->
             <dependency>
                 <groupId>com.aliyun.oss</groupId>
