feat:alibaba STS finished

--- a/intern-base-intf/pom.xml
+++ b/intern-base-intf/pom.xml
@@ -12,6 +12,15 @@
     <artifactId>intern-base-intf</artifactId>
 
     <dependencies>
+        <!--通用 sdk 依赖-->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>sts20150401</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+        </dependency>
         <!--redis-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
