--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,22 @@
                 <artifactId>spring-boot-starter-data-redis</artifactId>
                 <version>2.7.3</version>
             </dependency>
+            <!--通用 sdk 依赖-->
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>sts20150401</artifactId>
+                <version>1.1.4</version>
+            </dependency>
             <!--阿里云oss-->
             <dependency>
                 <groupId>com.aliyun.oss</groupId>
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>3.16.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>aliyun-java-sdk-core</artifactId>
+                <version>4.6.3</version>
             </dependency>
             <!--文件上传-->
             <dependency>
