--- a/intern-base-web/pom.xml
+++ b/intern-base-web/pom.xml
@@ -54,6 +54,21 @@
                 <!--修改版本-->
                 <version>3.1.0</version>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>vip.xiaozhao.intern.baseUtil.NaofferWebApplication</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
