--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>3.16.1</version>
             </dependency>
+            <!--credentials-->
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>credentials-java</artifactId>
+                <version>LATEST</version>
+            </dependency>
             <dependency>
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-java-sdk-core</artifactId>
