feat:get question detail finished

--- a/intern-base-web/src/main/resources/application.properties
+++ b/intern-base-web/src/main/resources/application.properties
@@ -63,3 +63,6 @@ aliyun.sts.access-key-secret=${ALIBABA_CLOUD_ACCESS_KEY_SECRET}
 aliyun.sts.endpoint=sts.cn-hangzhou.aliyuncs.com
 aliyun.sts.role-arn=acs:ram::1461908409773009:role/ramosstest
 aliyun.sts.role-session-name=my-website-server
+
+# 开启 MyBatis 的驼峰命名转换
+mybatis.configuration.map-underscore-to-camel-case=true
